[tool.poetry]
name = "lkspice"
version = "0.1.0"
description = ""
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>", "Tyler Pritchard <tyler.a.pritchard@nasa.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
spiceypy = "^6.0.0"
matplotlib = "^3.9.2"
astropy = ">=5.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"
pytest = "^8.3.3"
lksearch = "^1.0.0"
line-profiler = "^4.2.0"
tesswcs = "^1.2.2"
tesscube = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
